<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="40dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_text_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Estás seguro de eliminar el arcihvo: IMG_ADKJLAJD"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/biotif_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp" />

            <TextView
                android:id="@+id/ok_button"
                android:layout_weight="1"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="20dp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:background="@drawable/ic_danger"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/delete" />
</FrameLayout>